View Issue Details

IDProjectCategoryView StatusLast Update
0023822Open CASCADEOCCT:Data Exchangepublic2013-04-29 15:24
Reporterika Assigned Toika  
PrioritynormalSeverityminor 
Status closedResolutionfixed 
PlatformLinuxOSMandriva 2008 
Product Version6.5.4 
Target Version6.6.0Fixed in Version6.6.0 
Summary0023822: SIGSEGV 'segmentation violation' during writing IGES
Description'segmentation violation' during writing IGES on Mandriva 2010 because of wrong parameter hasMaxCoord, it sets true in function Standard_Boolean IGESControl_Writer::AddShape (const TopoDS_Shape& theShape), although maximum coordinate is infinite.

All test were made on Mandriva 2010.
Steps To ReproduceReadIges Doc ball_bearing.igs
WriteIges Doc new_file.igs
TagsNo tags attached.
Test case numberbugs iges(003) bug23822

Attached Files

  • ball_bearing.igs (67,878 bytes)

Relationships

parent of 0023439 closedika Integration of test grid "xigs" into the new testing system 

Activities

ika

2013-03-11 11:50

manager  

ball_bearing.igs (67,878 bytes)

ika

2013-03-11 12:07

manager   ~0023639

Checking for infinity coordinate was added.

Branch CR23822 is ready to be reviewed.

Dear GKA,
Please review.

gka

2013-03-11 12:22

developer   ~0023640

Branch CR23822 is ready to be tested

mkv

2013-03-12 14:27

tester   ~0023665

Last edited: 2013-03-12 16:18

Dear BugMaster,

Branch CR23822 (and products from GIT master) was compiled on Linux and Windows platforms and tested without rebase.
SHA-1: c51b0a5dfb1c49ca68d345a1eeb7ad0399a19b98

Number of compiler warnings:

occt component :
Linux: 3 (3 on master)
Windows: 11 (11 on master)

products component :
Linux: 0 (0 on master)
Windows: 50 (50 on master)

Regressions:
No regressions

Improvements:
No improvements

Testing cases:
bugs iges(003) bug23822 - OK.

Testing on Linux:
Total MEMORY difference: 238880616 / 239269120
Total CPU difference: 16033.95999999976 / 15315.380000000041

Testing on Windows:
Total MEMORY difference: 345831868 / 346081028
Total CPU difference: 21987.09375 / 21444.0625

There are not serious differences in images found by testdiff.

Related Changesets

occt: master 6db61714

2013-03-15 08:25:31

ika

Details Diff
0023822: SIGSEGV 'segmentation violation' during writing IGES
checking for infinity coordinates was added.
Adding test case for this fix
Shape name correction
Affected Issues
0023822
mod - src/IGESControl/IGESControl_Writer.cxx Diff File
add - tests/bugs/iges/bug23822 Diff File

Issue History

Date Modified Username Field Change
2013-03-11 11:50 ika New Issue
2013-03-11 11:50 ika Assigned To => ika
2013-03-11 11:50 ika File Added: ball_bearing.igs
2013-03-11 11:51 ika Summary SIGSEGV 'segmentation violation' during reading IGES => SIGSEGV 'segmentation violation' during writing IGES
2013-03-11 11:51 ika Description Updated
2013-03-11 12:07 ika Note Added: 0023639
2013-03-11 12:07 ika Assigned To ika => gka
2013-03-11 12:07 ika Status new => resolved
2013-03-11 12:08 ika Relationship added parent of 0023439
2013-03-11 12:22 gka Note Added: 0023640
2013-03-11 12:22 gka Status resolved => reviewed
2013-03-11 18:18 mkv Assigned To gka => mkv
2013-03-12 14:27 mkv Note Added: 0023665
2013-03-12 14:28 mkv Test case number => bugs iges(003) bug23822
2013-03-12 14:28 mkv Assigned To mkv => bugmaster
2013-03-12 14:28 mkv Status reviewed => tested
2013-03-12 16:18 mkv Note Edited: 0023665
2013-03-18 20:48 ika Changeset attached => occt master 6db61714
2013-03-18 20:48 ika Assigned To bugmaster => ika
2013-03-18 20:48 ika Status tested => verified
2013-03-18 20:48 ika Resolution open => fixed
2013-04-23 13:35 aiv Status verified => closed
2013-04-29 15:24 aiv Fixed in Version => 6.6.0