0023822: SIGSEGV 'segmentation violation' during writing IGES checking for infinity coordinates was added. Adding test case for this fix Shape name correction